Fix spacing errors

--- a/styles.css
+++ b/styles.css
@@ -73,7 +73,7 @@ body {
     flex-direction: column;
 
     padding: 25px;
-    gap: 10px;
+    gap: 15px;
 
     box-shadow: 0px 7px hsla(249, 10%, 26%, 0.25);
 }
@@ -83,6 +83,8 @@ body {
 
     border: 1px solid hsla(0, 0%, 0%, 0.25);
     border-radius: 5px;
+
+    font-weight: bold;
 }
 
 .signUp__button {
